[package]
name = "rust-db-restapi"
version = "0.1.0"
authors = ["Caio"]

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.6"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
